homelab/terraform/modules/based/pihole/templates/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: ${ name }
  namespace: ${ namespace }

  labels:
    app: ${ name }
    service: ${ service_name }
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - "${ hostname }"
      port:
        name: ${ service_name }
        number: ${ service_port }
        protocol: ${ service_protocal }
